# wasm-rayon-demo

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  index.html  wasm-worker.js
src/: ffi.rs  lib.rs  random.js
