[package]
name = "rust-async"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
rayon = { version = "1.5", optional = true }
wasm-bindgen = "0.2.78"
wasm-bindgen-rayon = { version = "1.0.3", optional = true, features = ["no-bundler"] }

[features]
parallel = ["rayon", "wasm-bindgen-rayon"]